force-app/main/default/objects/CommercientSF6__Cus__c/CommercientSF6__Cus__c.object-meta.xml
<CustomObject>
    <label>Customer Record Custom Forms</label>
    <nameField>
        <label>Customer Record Custom Forms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Record Custom Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>