force-app/main/default/objects/CommercientSF6__Cus__c/fields/CommercientSF6__FieldDescription__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__FieldDescription__c</fullName>
    <label>FieldDescription</label>
    <length>250</length>
    <type>Text</type>
</CustomField>