force-app/main/default/objects/CommercientSF6__Cus__c/fields/CommercientSF6__NumericValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__NumericValue__c</fullName>
    <label>NumericValue</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>