force-app/main/default/objects/CommercientSF6__Cus__c/fields/CommercientSF6__Syspro_Customer_Record__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF6__Syspro_Customer_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Customer Record</label>
    <referenceTo>CommercientSF__ArCustomer__c</referenceTo>
    <relationshipName>Cus</relationshipName>
    <type>Lookup</type>
</CustomField>